# proc-macro-example

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  clippy.yml  test.yml
assets/src/: front-end-ir-back-end.psd  serde-example.psd
proc_macro_example_derive/: Cargo.toml
proc_macro_example_derive/src/: lib.rs  prelude.rs  reflective.rs
src/: lib.rs  main.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/src/tests/: derive_reflective.rs  derive_reflectivene.rs  mod.rs
